bridge/base/0-otpp-namespace.yaml
#! 0-otpp-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: otpp
    labels:
        com.docker.compose.project: otpp
