bridge/base/otp-expose.yaml
#! otp-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: otp
    namespace: otpp
    labels:
        com.docker.compose.project: otpp
        com.docker.compose.service: otp
spec:
    selector:
        com.docker.compose.project: otpp
        com.docker.compose.service: otp
    ports:
        - name: otp-8080
          port: 8080
          targetPort: otp-8080
